--- a/samaaja/www/leaderboard/templates/active_cities.html
+++ b/samaaja/www/leaderboard/templates/active_cities.html
@@ -3,7 +3,7 @@
         <div class="ac_title">Most Active Cities</div>
         <div class="ac_content">
             <div class="ac_list">
-                <div class="ac_sub_title">Our most active change makers come from these cities</div>
+                <div class="ac_sub_title">Check out which cities or regions are adding most actions</div>
                 <div class="cities_filter">
                     <select class="hours-select" name="rank-based-on-city" id="rank-based-on-city">
                         <option value="Overall">Overall</option>
@@ -17,7 +17,7 @@
             
         </div>
         <div class="ac_cta">
-            <a href="{{ whatsapp_bot_url }}?text=JoinSolveNinjaCity" target="_blank"><button class="primary_btn">Join a City</button></a>
+            <a href="" target="_blank"><button class="primary_btn">Join a City</button></a>
         </div>
     </div>
 </div>
