--- a/samaaja/www/leaderboard/templates/campaign_section.html
+++ b/samaaja/www/leaderboard/templates/campaign_section.html
@@ -1,5 +1,5 @@
 <div class="wrapper-grey">
-    <div class="verified_ninjas email_campaigns">
+    <div class="verified_cms email_campaigns">
         <div class="vn_header">
             <div class="vn_title">
                 <span>Campaigns for Change</span>
