--- a/samaaja/www/leaderboard/templates/leaderboard_section.html
+++ b/samaaja/www/leaderboard/templates/leaderboard_section.html
@@ -1,13 +1,14 @@
 <div class="wrapper-white">
     <div class="leaderboard_wrapper">
-        <div class="lb_title">Most Active Change Makers</div>
-        <div class="filter-bar">
+        <div class="lb_title">Most Active Members</div>
+               <div class="ac_sub_title">Check out most active members across the country</div>
+               <div class="filter-bar">
             <select class="hours-select" name="rank-based-on" id="rank-based-on">
                 <option value="">Overall</option>
                 <option value="Last Month">Last Month</option>
                 <option value="Last 15 Days" selected="selected">Last 15 Days</option>
             </select>
-            <input type="search" class="searchbox" placeholder="Search" id="ninja">
+            <input type="search" class="searchbox" placeholder="Search" id="change_maker">
             <div class="city_hours_wrapper">
                 <select class="city-select" name="city" id="city">
                     <option value="">City</option>
