--- a/samaaja/www/leaderboard/templates/banner.html
+++ b/samaaja/www/leaderboard/templates/banner.html
@@ -1,32 +1,32 @@
 <div class="banner_wrapper">
     <div class="banner_content_wrapper">
-        <h1>Samaaja Change Maker Movement</h1>
-        <h2>#OwnYourChange</h2>
-        <h3>India's Largest Changemaker Community</h3>
+        <h1>Samaaja: Where Changemakers Grow Together</h1>
+        <h2>#GrowWithSamaaja</h2>
+        <h3>An open-source platform for non-profits to design, activate, and scale changemaker communities</h3>
         <div class="b_content">
             <div class="b_content_box">
-                <img src="./assets/solve_ninja/images/seeds_funds.png" alt="" />
-                <span>Get Seed Funds</span>
+                <img src="./assets/samaaja/images/build_skills.png" alt="" />
+                <span>Dynamic Portfolio</span>
             </div>
             <div class="bcb_divider"></div>
             <div class="b_content_box">
-                <img src="./assets/solve_ninja/images/access_mentorship.png" alt="" />
-                <span>Access mentorship</span>
+                <img src="./assets/samaaja/images/access_mentorship.png" alt="" />
+                <span>Leaderboards</span>
             </div>
             <div class="bcb_divider"></div>
             <div class="b_content_box">
-                <img src="./assets/solve_ninja/images/build_skills.png" alt="" />
-                <span>Chance to Build Skills</span>
+                <img src="./assets/samaaja/images/land_internships.png" alt="" />
+                <span>Build Expertise</span>
             </div>
             <div class="bcb_divider"></div>
             <div class="b_content_box">
-                <img src="./assets/solve_ninja/images/land_internships.png" alt="" />
-                <span>Learning Opportunities</span>
+                <img src="./assets/samaaja/images/seeds_funds.png" alt="" />
+                <span>Funding Opportunities</span>
             </div>
         </div>
         <div class="b_cta">
             <a href="" target="_blank"><button class="secondry_btn">Join Now</button></a>
-            <p>Already A Member? <a href="" target="_blank">Continue Here</a></p>
+            <p>Already A Member? <a href="" target="_blank">Click to Login</a></p>
         </div>
     </div>
 </div>
