--- a/samaaja/www/leaderboard/templates/verified_cm_section.html
+++ b/samaaja/www/leaderboard/templates/verified_cm_section.html
@@ -1,13 +1,13 @@
 <div class="wrapper-grey">
-    <div class="verified_ninjas">
+    <div class="verified_cms">
         <div class="vn_stats">
             <div class="vn_stats_wrapper">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                     <path fill="#51a76a" d="M325.4 289.2L224 390.6 122.6 289.2C54 295.3 0 352.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-70.2-54-127.1-122.6-133.2zM32 192c27.3 0 51.8-11.5 69.2-29.7 15.1 53.9 64 93.7 122.8 93.7 70.7 0 128-57.3 128-128S294.7 0 224 0c-50.4 0-93.6 29.4-114.5 71.8C92.1 47.8 64 32 32 32c0 33.4 17.1 62.8 43.1 80-26 17.2-43.1 46.6-43.1 80zm144-96h96c17.7 0 32 14.3 32 32H144c0-17.7 14.3-32 32-32z"></path>
                 </svg>
                 <div class="stats_box">
-                    <strong>{{ active_ninja_count if active_ninja_count else 0 }}</strong>
-                    <span>Change Makers</span>
+                    <strong>{{ active_cm_count if active_cm_count else 0 }}</strong>
+                    <span>Total Members</span>
                 </div>
             </div>
             <div class="vn_sb_divider"></div>
@@ -29,17 +29,17 @@
         </div>
         <div class="vn_header">
             <div class="vn_title">
-                <span>Verified Change Makers</span>
-                <small>Change makers vetted for their bias to take action.</small>
+                <span>Verified Members</span>
+                <small>Members with verified profile and actions portfolio</small>
             </div>
         </div>
         <div class="vn_content">
             {% for user in verified_users %}
-                {{ frappe.render_template('www/leaderboard/templates/ninja.html', {"user": user}) }}
+                {{ frappe.render_template('www/leaderboard/templates/change_maker.html', {"user": user}) }}
             {% endfor %}
         </div>
         <div class="vn_all">
-            <a href="/ninjas"><button class="main_btn">View All</button></a>
+            <a href="/verified-cms"><button class="main_btn">View All</button></a>
         </div>
     </div>
 </div>
