made samaaja configuable

--- a/samaaja/www/leaderboard/templates/active_cities.html
+++ b/samaaja/www/leaderboard/templates/active_cities.html
@@ -1,9 +1,9 @@
 <div class="wrapper-grey">
     <div class="active_cities">
-        <div class="ac_title">Most Active Cities</div>
+        <div class="ac_title">{{samaaja_settings.most_active_cities_label}}</div>
         <div class="ac_content">
             <div class="ac_list">
-                <div class="ac_sub_title">Check out which cities or regions are adding most actions</div>
+                <div class="ac_sub_title">{{samaaja_settings.most_active_cities_summary}}</div>
                 <div class="cities_filter">
                     <select class="hours-select" name="rank-based-on-city" id="rank-based-on-city">
                         <option value="Overall">Overall</option>
