--- a/samaaja/www/leaderboard/templates/campaign_section.html
+++ b/samaaja/www/leaderboard/templates/campaign_section.html
@@ -2,8 +2,8 @@
     <div class="verified_cms email_campaigns">
         <div class="vn_header">
             <div class="vn_title">
-                <span>Campaigns for Change</span>
-                <small>Explore live campaigns. Sign, share, and take a stand for what's right.</small>
+                <span>Petitions for Change</span>
+                <small>Explore live petitions. Sign, share, and take a stand for what's right.</small>
             </div>
         </div>
         {% if campaigns|length == 0 %}
