--- a/samaaja/www/leaderboard/templates/leaderboard_section.html
+++ b/samaaja/www/leaderboard/templates/leaderboard_section.html
@@ -1,7 +1,7 @@
 <div class="wrapper-white">
     <div class="leaderboard_wrapper">
-        <div class="lb_title">Most Active Members</div>
-               <div class="ac_sub_title">Check out most active members across the country</div>
+        <div class="lb_title">{{samaaja_settings.most_active_members_label}}</div>
+               <div class="ac_sub_title">{{samaaja_settings.most_active_members_summary}}</div>
                <div class="filter-bar">
             <select class="hours-select" name="rank-based-on" id="rank-based-on">
                 <option value="">Overall</option>
