--- a/samaaja/www/leaderboard/templates/banner.html
+++ b/samaaja/www/leaderboard/templates/banner.html
@@ -16,9 +16,13 @@
              {% endfor %}
             
         </div>
-        <div class="b_cta">
-            <a href="{{samaaja_settings.join_link}}" target="_blank"><button class="secondry_btn">{{samaaja_settings.join_title}}</button></a>
-            <p>Already A Member? <a href="" target="_blank">Click to Login</a></p>
+        <div class="cta-wrapper">
+            <div class="b_cta">
+                <a href="{{samaaja_settings.join_forum_link}}" target="_blank"><button class="secondry_btn">{{samaaja_settings.join_forum_title}}</button></a>
+            </div>
+            <div class="b_cta">
+                <a href="{{samaaja_settings.join_conversations_link}}" target="_blank"><button class="secondry_btn">{{samaaja_settings.join_conversations_title}}</button></a>
+            </div>
         </div>
     </div>
 </div>
